Finished 2nd and 3rd Layers

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="images/Lelouch.jpg" width="200" height="275">
                 </div>
                 <div class="c3cap">
-                    <p>Lelouch vi Brittannia from Code Geass</p>
+                    <p>Lelouch vi Britannia from Code Geass</p>
                 </div>
             </div>
             <div class="card4">
@@ -65,12 +65,15 @@
                     <img src="images/bocchi.jpg" width="200" height="275">
                 </div>
                 <div class="c4cap">
-                    <p>Hitori "Bocchi" Gotoh from Bocchi The Rock!</p>
+                    <p>Gotou "Bocchi" Hitori from Bocchi The Rock!</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="lowermid"></div>
+    <div class="lowermid">
+        <p class="quote">"Man I wish I had a Bankai, or something"</p>
+        <p class="quoter">-Sakata Gintoki</p>
+    </div>
     <div class="bottom"></div>
     <div class="footer"></div>
 </body>
