Finished 4th Layer and Footer, Page is done!

--- a/index.html
+++ b/index.html
@@ -31,50 +31,65 @@
             </div>
         </div>
     </div>
-    <div class="uppermid">
-        <div class="umtop">
-            <h2>The Best Characters</h2>
+    <div class="middle">
+        <div class="uppermid">
+            <div class="umtop">
+                <h2>The Best Characters</h2>
+            </div>
+            <div class="umbottom">
+                <div class="card1">
+                    <div class="c1img">
+                        <img src="images/GintokiSakata.jpg">
+                    </div>
+                    <div class="c1cap">
+                        <p>Sakata Gintoki from Gintama</p>
+                    </div>
+                </div>
+                <div class="card2">
+                    <div class="c2img">
+                        <img src="images/gyro.jpg" width="200" height="275">
+                    </div>
+                    <div class="c2cap">
+                        <p>Gyro Zeppeli from Jojo's Bizzare Adventure</p>
+                    </div>
+                </div>
+                <div class="card3">
+                    <div class="c3img">
+                        <img src="images/Lelouch.jpg" width="200" height="275">
+                    </div>
+                    <div class="c3cap">
+                        <p>Lelouch vi Britannia from Code Geass</p>
+                    </div>
+                </div>
+                <div class="card4">
+                    <div class="c4img">
+                        <img src="images/bocchi.jpg" width="200" height="275">
+                    </div>
+                    <div class="c4cap">
+                        <p>Gotou "Bocchi" Hitori from Bocchi The Rock!</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="umbottom">
-            <div class="card1">
-                <div class="c1img">
-                    <img src="images/GintokiSakata.jpg">
+        <div class="lowermid">
+            <p class="quote">"Man I wish I had a Bankai, or something"</p>
+            <p class="quoter">-Sakata Gintoki</p>
+        </div>
+        
+        <div class="bottom">
+            <div class="bmid">
+                <div class="bmleft">
+                    <h3>Disagree? Explain Why!</h3>
+                    <p class="dontcare">Write your paragraph (which I probably won't read) by clicking that button there</p>
                 </div>
-                <div class="c1cap">
-                    <p>Sakata Gintoki from Gintama</p>
-                </div>
-            </div>
-            <div class="card2">
-                <div class="c2img">
-                    <img src="images/gyro.jpg" width="200" height="275">
-                </div>
-                <div class="c2cap">
-                    <p>Gyro Zeppeli from Jojo's Bizzare Adventure</p>
-                </div>
-            </div>
-            <div class="card3">
-                <div class="c3img">
-                    <img src="images/Lelouch.jpg" width="200" height="275">
-                </div>
-                <div class="c3cap">
-                    <p>Lelouch vi Britannia from Code Geass</p>
-                </div>
-            </div>
-            <div class="card4">
-                <div class="c4img">
-                    <img src="images/bocchi.jpg" width="200" height="275">
-                </div>
-                <div class="c4cap">
-                    <p>Gotou "Bocchi" Hitori from Bocchi The Rock!</p>
+                <div class="bmright">
+                    <button><a class="disagree" href="#">Click to disagree</a></button>
                 </div>
             </div>
         </div>
     </div>
-    <div class="lowermid">
-        <p class="quote">"Man I wish I had a Bankai, or something"</p>
-        <p class="quoter">-Sakata Gintoki</p>
+    <div class="footer">
+        <p class="ftext">Page made by Kioshi</p>
     </div>
-    <div class="bottom"></div>
-    <div class="footer"></div>
 </body>
 </html>
